added handlebars and some support for post and get requests

--- a/node-backend-starter-code/public/index.hbs
+++ b/node-backend-starter-code/public/index.hbs
@@ -8,7 +8,7 @@
   <form class="" action="index.html" method="post">
     <input type="text" name="name" value="" placeholder="Search OMDB">
     <button type="submit" name="button">Search</button>
-
   </form>
+  {{{body}}}
 </body>
 </html>
